--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   },
   "dependencies": {
     "promptly": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
