--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -13,4 +13,5 @@ jobs:
 
       - name: Hexlet project check
         uses: hexlet/project-action@release
-      - run: make lint
+      - name: ESLint
+        run: make lint
