--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: eslint
+name: CI
 
 on:
   push:
@@ -14,3 +14,5 @@ jobs:
         run: make install
       - name: Run ESLint
         run: make lint
+      - name: Run tests
+        run: make test
